allow implications, equivalences, and exclusive or in propositional formulas